# geneticpy

./: .readthedocs.yaml  .travis.yml  LICENSE  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
geneticpy/: __init__.py  genetic_search_cv.py  optimize_function.py  parameter_set.py  population.py
geneticpy/distributions/: __init__.py  distribution_base.py
tests/: optimization_tests.py  test_distributions.py  test_genetic_search_cv.py  test_optimize.py
