[metadata]
name = geneticpy
author = Brandon Schabell
author_email = brandonschabell@gmail.com
description = GeneticPy is an optimizer that uses a genetic algorithm to quickly search through custom parameter spaces for optimal solutions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geneticpy/geneticpy
licence = MIT
project_urls =
    Documentation = https://geneticpy.readthedocs.io
    Bug Tracker = https://github.com/geneticpy/geneticpy/issues
    Source Code = https://github.com/geneticpy/geneticpy
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
python_requires = ~=3.8
install_requires =
    numpy >= 1.14.0
    tqdm
    scikit-learn >= 1.0.2

[options.extras_require]
tests = pytest; pandas; pytest-runner
docs = sphinx; sphinx_rtd_theme; numpydoc

[options.packages.find]
exclude =
    docs*
    tests*
